--- a/report/project.bib
+++ b/report/project.bib
@@ -187,3 +187,13 @@ eprint = {
     
 }
 }
+
+@article{ser_deep_dl,
+  author={Khalil, Ruhul Amin and Jones, Edward and Babar, Mohammad Inayatullah and Jan, Tariqullah and Zafar, Mohammad Haseeb and Alhussain, Thamer},
+  journal={IEEE Access}, 
+  title={Speech Emotion Recognition Using Deep Learning Techniques: A Review}, 
+  year={2019},
+  volume={7},
+  number={},
+  pages={117327-117345},
+  doi={10.1109/ACCESS.2019.2936124}}
