--- a/report/project.bib
+++ b/report/project.bib
@@ -197,3 +197,14 @@ eprint = {
   number={},
   pages={117327-117345},
   doi={10.1109/ACCESS.2019.2936124}}
+
+@article{tomar2006converting,
+  title={Converting video formats with FFmpeg},
+  author={Tomar, Suramya},
+  journal={Linux Journal},
+  volume={2006},
+  number={146},
+  pages={10},
+  year={2006},
+  publisher={Belltown Media}
+}
