--- a/code/JSONs/json_to_latex.ipynb
+++ b/code/JSONs/json_to_latex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,9 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[True, True, True, True, True, True, True, True, True, True, True]\n",
+      "['CNN IEMOCAP', 'CNN IMPROV', 'CNN MIXED', 'LSTM IEMOCAP', 'LSTM IMPROV', 'LSTM MIXED', 'MLP IEMOCAP', 'MLP IMPROV', 'MLP MIXED']\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -105,22 +113,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MLP IEMOCAP</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MLP IEMOCAP</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MLP IMPROV</th>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -156,8 +148,6 @@
        "LSTM IMPROV                 0.0                 0.0                 0.0   \n",
        "LSTM MIXED                  0.0                 0.0                 0.0   \n",
        "MLP IEMOCAP                 0.0                 0.0                 0.0   \n",
-       "MLP IEMOCAP                 0.0                 0.0                 0.0   \n",
-       "MLP IMPROV                  0.0                 0.0                 0.0   \n",
        "MLP IMPROV                  0.0                 0.0                 0.0   \n",
        "MLP MIXED                   0.0                 0.0                 0.0   \n",
        "\n",
@@ -169,26 +159,27 @@
        "LSTM IMPROV                    0.0               0.0  \n",
        "LSTM MIXED                     0.0               0.0  \n",
        "MLP IEMOCAP                    0.0               0.0  \n",
-       "MLP IEMOCAP                    0.0               0.0  \n",
-       "MLP IMPROV                     0.0               0.0  \n",
        "MLP IMPROV                     0.0               0.0  \n",
        "MLP MIXED                      0.0               0.0  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "index = [str(item.split(\"_\")[0]).upper() + \" \" +  str(item.split(\"_\")[1]).upper() for item in jsons]\n",
-    "df = pd.DataFrame(data=np.zeros((11,5)),columns=[\"Original Mean CCC\", \"Tested Valence CCC\", \"Tested Arousal CCC\", \"Tested Dominance CCC\", \"Trained Mean CCC\"],index=index)\n",
+    "jsons_filtered = list(filter(lambda x: False if x.endswith(\"optim.py_data.json\") else True,jsons))\n",
+    "index = [str(item.split(\"_\")[0]).upper() + \" \" +  str(item.split(\"_\")[1]).upper() for item in jsons_filtered]\n",
+    "print([item.endswith(\".json\") for item in jsons])\n",
+    "print(index)\n",
+    "df = pd.DataFrame(data=np.zeros((9,5)),columns=[\"Original Mean CCC\", \"Tested Valence CCC\", \"Tested Arousal CCC\", \"Tested Dominance CCC\", \"Trained Mean CCC\"],index=index)\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -222,35 +213,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>CNN IEMOCAP</th>\n",
-       "      <td>0.330</td>\n",
-       "      <td>0.022</td>\n",
+       "      <td>0.283</td>\n",
+       "      <td>0.061</td>\n",
        "      <td>0.043</td>\n",
        "      <td>0.043</td>\n",
-       "      <td>0.130</td>\n",
+       "      <td>0.151</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CNN IMPROV</th>\n",
-       "      <td>0.372</td>\n",
+       "      <td>0.364</td>\n",
        "      <td>-0.000</td>\n",
-       "      <td>-0.000</td>\n",
-       "      <td>-0.000</td>\n",
-       "      <td>0.103</td>\n",
+       "      <td>-0.001</td>\n",
+       "      <td>-0.001</td>\n",
+       "      <td>0.161</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CNN MIXED</th>\n",
-       "      <td>0.204</td>\n",
-       "      <td>0.032</td>\n",
-       "      <td>0.046</td>\n",
-       "      <td>0.046</td>\n",
-       "      <td>0.119</td>\n",
+       "      <td>0.201</td>\n",
+       "      <td>0.037</td>\n",
+       "      <td>0.043</td>\n",
+       "      <td>0.043</td>\n",
+       "      <td>0.159</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LSTM IEMOCAP</th>\n",
-       "      <td>0.359</td>\n",
-       "      <td>0.013</td>\n",
-       "      <td>-0.000</td>\n",
-       "      <td>-0.000</td>\n",
-       "      <td>0.118</td>\n",
+       "      <td>0.360</td>\n",
+       "      <td>0.019</td>\n",
+       "      <td>-0.002</td>\n",
+       "      <td>-0.002</td>\n",
+       "      <td>0.108</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LSTM IMPROV</th>\n",
@@ -258,7 +249,7 @@
        "      <td>-0.001</td>\n",
        "      <td>-0.003</td>\n",
        "      <td>-0.003</td>\n",
-       "      <td>0.113</td>\n",
+       "      <td>0.122</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LSTM MIXED</th>\n",
@@ -266,47 +257,31 @@
        "      <td>-0.008</td>\n",
        "      <td>-0.002</td>\n",
        "      <td>-0.002</td>\n",
-       "      <td>0.118</td>\n",
+       "      <td>0.108</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MLP IEMOCAP</th>\n",
-       "      <td>0.434</td>\n",
-       "      <td>0.042</td>\n",
-       "      <td>0.020</td>\n",
-       "      <td>0.020</td>\n",
-       "      <td>0.005</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MLP IEMOCAP</th>\n",
-       "      <td>0.434</td>\n",
-       "      <td>0.042</td>\n",
-       "      <td>0.020</td>\n",
-       "      <td>0.020</td>\n",
-       "      <td>0.005</td>\n",
+       "      <td>0.453</td>\n",
+       "      <td>-0.011</td>\n",
+       "      <td>-0.023</td>\n",
+       "      <td>-0.023</td>\n",
+       "      <td>-0.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MLP IMPROV</th>\n",
-       "      <td>0.419</td>\n",
-       "      <td>0.035</td>\n",
-       "      <td>-0.058</td>\n",
-       "      <td>-0.058</td>\n",
-       "      <td>0.005</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MLP IMPROV</th>\n",
-       "      <td>0.419</td>\n",
-       "      <td>0.035</td>\n",
-       "      <td>-0.058</td>\n",
-       "      <td>-0.058</td>\n",
-       "      <td>0.005</td>\n",
+       "      <td>0.411</td>\n",
+       "      <td>-0.001</td>\n",
+       "      <td>-0.004</td>\n",
+       "      <td>-0.004</td>\n",
+       "      <td>-0.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MLP MIXED</th>\n",
        "      <td>0.294</td>\n",
-       "      <td>0.104</td>\n",
-       "      <td>0.050</td>\n",
-       "      <td>0.050</td>\n",
-       "      <td>0.005</td>\n",
+       "      <td>0.020</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>-0.000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -314,41 +289,37 @@
       ],
       "text/plain": [
        "              Original Mean CCC  Tested Valence CCC  Tested Arousal CCC  \\\n",
-       "CNN IEMOCAP               0.330               0.022               0.043   \n",
-       "CNN IMPROV                0.372              -0.000              -0.000   \n",
-       "CNN MIXED                 0.204               0.032               0.046   \n",
-       "LSTM IEMOCAP              0.359               0.013              -0.000   \n",
+       "CNN IEMOCAP               0.283               0.061               0.043   \n",
+       "CNN IMPROV                0.364              -0.000              -0.001   \n",
+       "CNN MIXED                 0.201               0.037               0.043   \n",
+       "LSTM IEMOCAP              0.360               0.019              -0.002   \n",
        "LSTM IMPROV               0.338              -0.001              -0.003   \n",
        "LSTM MIXED                0.215              -0.008              -0.002   \n",
-       "MLP IEMOCAP               0.434               0.042               0.020   \n",
-       "MLP IEMOCAP               0.434               0.042               0.020   \n",
-       "MLP IMPROV                0.419               0.035              -0.058   \n",
-       "MLP IMPROV                0.419               0.035              -0.058   \n",
-       "MLP MIXED                 0.294               0.104               0.050   \n",
+       "MLP IEMOCAP               0.453              -0.011              -0.023   \n",
+       "MLP IMPROV                0.411              -0.001              -0.004   \n",
+       "MLP MIXED                 0.294               0.020               0.001   \n",
        "\n",
        "              Tested Dominance CCC  Trained Mean CCC  \n",
-       "CNN IEMOCAP                  0.043             0.130  \n",
-       "CNN IMPROV                  -0.000             0.103  \n",
-       "CNN MIXED                    0.046             0.119  \n",
-       "LSTM IEMOCAP                -0.000             0.118  \n",
-       "LSTM IMPROV                 -0.003             0.113  \n",
-       "LSTM MIXED                  -0.002             0.118  \n",
-       "MLP IEMOCAP                  0.020             0.005  \n",
-       "MLP IEMOCAP                  0.020             0.005  \n",
-       "MLP IMPROV                  -0.058             0.005  \n",
-       "MLP IMPROV                  -0.058             0.005  \n",
-       "MLP MIXED                    0.050             0.005  "
+       "CNN IEMOCAP                  0.043             0.151  \n",
+       "CNN IMPROV                  -0.001             0.161  \n",
+       "CNN MIXED                    0.043             0.159  \n",
+       "LSTM IEMOCAP                -0.002             0.108  \n",
+       "LSTM IMPROV                 -0.003             0.122  \n",
+       "LSTM MIXED                  -0.002             0.108  \n",
+       "MLP IEMOCAP                 -0.023            -0.000  \n",
+       "MLP IMPROV                  -0.004            -0.000  \n",
+       "MLP MIXED                    0.001            -0.000  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "for file in jsons:\n",
+    "for file in jsons_filtered:\n",
     "    with open(file) as f:\n",
-    "        test_idx = int(jsons.index(file))\n",
+    "        test_idx = int(jsons_filtered.index(file))\n",
     "        data = json.load(f)\n",
     "    df.at[index[test_idx],\"Original Mean CCC\"] = round(data[\"First Eval\"],3)\n",
     "    df.at[index[test_idx],\"Tested Valence CCC\"] = round(data[\"Second Eval whole\"][0],3)\n",
@@ -360,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
