--- a/report/main.tex
+++ b/report/main.tex
@@ -310,21 +310,20 @@ The pre-trained models are evaluated using the new test data. Furthermore, to ma
     \centering
     \begin{tabular}{cccccc}
         \toprule
-        {} &  \makecell{Original\\ Mean CCC} &  \makecell{Tested\\ Valence CCC} &  \makecell{Tested\\ Arousal CCC} &  \makecell{Tested\\ Dominance CCC} &  \makecell{Trained \\Mean CCC} \\
+        {} & \makecell{Original \\ Mean CCC} &  \makecell{Tested \\ Valence CCC} &  \makecell{Tested \\ Arousal CCC} &  \makecell{Tested \\ Dominance CCC} &  \makecell{Trained\\ Mean CCC} \\
         \midrule
-        CNN TS1  &              0.330 &               0.022 &               0.043 &                 0.043 &             0.130 \\ \midrule
-        CNN TS2   &              0.372 &              -0.000 &              -0.000 &                -0.000 &             0.103 \\\midrule
-        CNN M    &              0.204 &               0.032 &               0.046 &                 0.046 &             0.119 \\\midrule
-        LSTM TS1 &              0.359 &               0.013 &              -0.000 &                -0.000 &             0.118 \\\midrule
-        LSTM TS2  &              0.338 &              -0.001 &              -0.003 &                -0.003 &             0.113 \\\midrule
-        LSTM M   &              0.215 &              -0.008 &              -0.002 &                -0.002 &             0.118 \\\midrule
-        MLP TS1  &              0.434 &               0.042 &               0.020 &                 0.020 &             0.005 \\\midrule
-        % \makecell{MLP IEMOCAP \\ optimized}  &              0.434 &               0.042 &               0.020 &                 0.020 &             0.005 \\\midrule
-        MLP TS2   &              0.419 &               0.035 &              -0.058 &                -0.058 &             0.005 \\\midrule
-        % \makecell{MLP IMPROV \\ optimized}   &              0.419 &               0.035 &              -0.058 &                -0.058 &             0.005 \\\midrule
-        MLP M    &              0.294 &               0.104 &               0.050 &                 0.050 &             0.005 \\
+        CNN TS1  &              0.283 &               0.061 &               0.043 &                 0.043 &             0.151 \\
+        CNN TS2   &              0.364 &              -0.000 &              -0.001 &                -0.001 &             0.161 \\
+        CNN M    &              0.201 &               0.037 &               0.043 &                 0.043 &             0.159 \\
+        LSTM TS1 &              0.360 &               0.019 &              -0.002 &                -0.002 &             0.108 \\
+        LSTM TS2  &              0.338 &              -0.001 &              -0.003 &                -0.003 &             0.122 \\
+        LSTM M   &              0.215 &              -0.008 &              -0.002 &                -0.002 &             0.108 \\
+        MLP TS1  &              0.453 &              -0.011 &              -0.023 &                -0.023 &            -0.000 \\
+        MLP TS2   &              0.411 &              -0.001 &              -0.004 &                -0.004 &            -0.000 \\
+        MLP M    &              0.294 &               0.020 &               0.001 &                 0.001 &            -0.000 \\
         \bottomrule
         \end{tabular}
+        
     \captionsetup{justification=centering, singlelinecheck=off} 
     \caption{CCC results of the conducted experiments }
     \vspace*{5pt} TS1:IEMOCAP, TS2:IMPROV, M:MIXED
@@ -338,6 +337,8 @@ One may notice the performance difference between the dataset by comparing the n
 \\
 \\
 The  \textbf{Trained Mean CCC} results slightly varies among the experiments. The results are obtained via 3 different train-test splits and the mean of them can be considered as the 3-fold cross validation CCC. \\
+\\
+\\
 \begin{minipage}{0.3\textwidth}
     \centering
     $CNN_{avg} = 0.117$            
